Update envvar and yaml use description

--- a/modules/ROOT/pages/deployment/services/s-list/policies.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/policies.adoc
@@ -107,7 +107,7 @@ data.<package-name>.<complete-rule-variable-name>
 
 === Proxy
 
-Note that this setting has to be part of the proxy configuration.
+Note that this setting has to be part of the xref:{s-path}/proxy.adoc[proxy] configuration.
 
 [source,yaml]
 ----
