--- a/modules/ROOT/pages/deployment/storage/nfs.adoc
+++ b/modules/ROOT/pages/deployment/storage/nfs.adoc
@@ -1,6 +1,7 @@
 = Network File System (NFS) Deployment Recommendations
 :toc: right
 :toclevels: 2
+:page-aliases: deployment/nfs/nfs.adoc
 :description: ownCloud recommends using NFS for any scenario when accessing Unix-based remote servers or storages other than local storage. It has solid performance and is very stable. This guide covers the official ownCloud NFS (Network File System) deployment recommendations for Infinite Scale.
 
 :ea-ietf-url: https://datatracker.ietf.org/doc/html/rfc8276
