--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -6,12 +6,15 @@
 ** xref:security/security.adoc[Security Aspects]
 * xref:deployment/index.adoc[Deployment]
 ** xref:prerequisites/prerequisites.adoc[Prerequisites]
+** Storage
+*** xref:deployment/storage/general-considerations.adoc[General Storage Considerations]
+*** xref:deployment/storage/nfs.adoc[Network File System]
+*** xref:deployment/storage/s3.adoc[S3]
 ** xref:deployment/general/general-info.adoc[General Information]
 ** xref:deployment/general/ocis-init.adoc[The ocis init Command]
 ** xref:deployment/binary/binary-setup.adoc[Binary Setup]
 ** xref:deployment/container/container-setup.adoc[Container Setup]
 ** xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]
-** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 ** xref:deployment/wopi/wopi.adoc[Office Applications using WOPI]
 ** xref:deployment/security/security.adoc[Securing oCIS]
 ** xref:deployment/gdpr/gdpr.adoc[User Triggered GDPR Report]
