add additional example

--- a/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
@@ -86,6 +86,17 @@ ocis storage-users uploads sessions --restart
 ocis postprocessing restart -u <uploadID>
 ----
 
+Alternatively, instead of starting one specific upload, a system admin can also restart all uploads that are currently in a specific step.
+
+Examples:
+
+[source,bash]
+----
+ocis postprocessing restart                # Restarts all uploads where postprocessing is finished, but upload is not finished.
+ocis postprocessing restart -s "finished"  # Equivalent to the above.
+ocis postprocessing restart -s "virusscan" # Restart all uploads currently in virusscan step.
+----
+
 == Event Bus Configuration
 
 include::partial$multi-location/event-bus.adoc[]
