--- a/modules/ROOT/pages/deployment/storage/s3.adoc
+++ b/modules/ROOT/pages/deployment/storage/s3.adoc
@@ -14,7 +14,7 @@ This section gives a brief description about S3 and how it compares to POSIX bas
 S3 based storage is well positioned for customers expecting a very high capacity demand for storing Infinite Scale blobs.
 
 * In S3, objects are stored by name in a collection called a bucket and have no hierarchical order. +
-Objects in a bucket are indexed and can be listed with a prefix based search. This provides a clear scaling advantage. Compared POSIX, the consistency domain is constrained to a single bucket instead of the entire hierarchical tree.
+Objects in a bucket are indexed and can be listed with a prefix based search. This provides a clear scaling advantage. Compared with POSIX, the consistency domain is constrained to a single bucket instead of the entire hierarchical tree.
 
 * The bucket is guaranteed eventually consistent. +
 The application must accept that an object that was just updated may or may not appear instantly in the list and may or may not have the latest information, the platform is allowed a best effort at being immediately consistent. Over time, the performance of the system shows that data is in general fully consistent. The architectural freedom to relax the constraint implies real performance and scalability advantages.
@@ -28,14 +28,14 @@ This method is very well adapted to WAN based interactions.
 * Requests are signed with a shared secret, and communicated over an SSL connection. +
 This provides protection against man in the middle attacks and prevents passwords from being communicated in requests.
 
-For more and additional details on S3 read the https://cloud.google.com/learn/what-is-object-storage[What is Object storage?, window=_blank] from Google.
+For more details on S3 read the https://cloud.google.com/learn/what-is-object-storage[What is Object storage?, window=_blank] from Google.
 
 S3 comparison to POSIX::
 * *Performance:* +
 The POSIX filesystem interface is inherently IOPS centric. There is a lot of communication which is expensive and hard to scale. The RESTful S3 API addresses this by transforming IOPS into a throughput problem. Throughput is easier and cheaper to scale. This is the reason why an object storage has high performance at a massive scale.
 
 * *Semantics:* +
-There is no way to guarantee consistency correctness because object operations are atomic and immutable. As a consequence, uncommitted data can be lost in case of a crash or corruption issues can occur in case of shared shared buckets.
+There is no way to guarantee consistency correctness because object operations are atomic and immutable. As a consequence, uncommitted data can be lost in case of a crash or corruption issues can occur in case of shared buckets.
 
 * *Data Integrity:* +
 Writes or any mutations to a file do not appear in the namespace until it is committed. Concurrent access across shared buckets will not see any modifications. Shared access is therefore not the focus of S3.
@@ -45,7 +45,7 @@ The way S3 APIs handle identity and access management policies is incompatible w
 
 == Configuration
 
-To configure Infinite Scale for the use with S3, read the
+To configure Infinite Scale for use with S3, read the
 
 * xref:deployment/general/general-info.adoc#using-s3-for-blobs[Using S3 for Blobs] documenation and the
 * xref:deployment/container/orchestration/orchestration.adoc#docker-compose-examples[Docker Compose Examples] in particular `ocis_s3`.
