--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -1,7 +1,6 @@
 = General Information
 :toc: right
 :description: This document covers general aspects of Infinite Scale like start modes, services, important minimum configuration etc. for a common understanding.
-:aws-bucket-policy-url: https://docs.aws.amazon.com/AmazonS3/latest/userguide/bucket-policies.html
 
 == Introduction
 
@@ -180,7 +179,8 @@ See xref:using-s3-for-blobs[Using S3 for Blobs] for the S3 configuration.
 +
 [NOTE]
 ====
-* Do not replace `$HOME` with `~` (tilde). The code does not resolve `~` to the users home directory.
+* Do not replace `$HOME` with `~` (tilde).
+** The code does not resolve `~` to the users home directory.
 * Check that `$HOME` resolves to a valid directory.
 ** When using a system user for the runtime, which has no login and therefore no home directory, like in the scenario xref:deployment/binary/binary-setup.adoc#setting-up-systemd-for-infinite-scale[Setting up systemd for Infinite Scale], you *must* specify a configuration file location.
 ====
@@ -192,13 +192,12 @@ See xref:using-s3-for-blobs[Using S3 for Blobs] for the S3 configuration.
 Because Infinite Scale does not use a database for storing information like users, groups, spaces, internal data, etc., it saves all this data to a permanent file location. Depending on the system setup, the base directory contains not only the metadata but also blobs. See xref:prerequisites/prerequisites.adoc#filesystems-and-shared-storage[Filesystems and Shared Storage] for more details.
 
 * When only using a supported POSIX filesystem, blobs and metadata are stored on POSIX.  
-* When using S3 and POSIX, blobs are stored on S3, while metadata is stored on POSIX. Also see xref:using-s3-for-blobs[Using S3 for Blobs].
+* When using S3 and POSIX, blobs are stored on S3, while metadata is stored on POSIX. See the xref:deployment/storage/s3.adoc[S3] documentation for more details.
 
 {empty}
 
 Path for System Data::
-The environment variable `OCIS_BASE_DATA_PATH` sets the base path in a generic way. It has a xref:default-location[default location] but can also be manually defined. It is the root for many services which automatically add a subdirectory to that root for storing their data. Some services can manually define that path if necessary. Defining them independently can be required like when using a xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] setup or recommended for using the xref:{s-path}/search.adoc[search service].
-
+The environment variable `OCIS_BASE_DATA_PATH` sets the base path in a generic way. It has a xref:default-location[default location] but can also be manually defined. It is the root for many services which automatically add a subdirectory to that root for storing their data. Some services can manually define that path if necessary. Defining them independently can be required like when using a xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] setup or recommended for using the xref:{s-path}/search.adoc[search service] or xref:{s-path}/thumbnails.adoc[thumbnails service].
 
 // ocis/services$ grep -r 'OCIS_BASE_DATA_PATH' --include=*.go **/pkg/config
 // https://docs.asciidoctor.org/asciidoc/latest/subs/apply-subs-to-blocks/
@@ -246,7 +245,7 @@ The following environment variables can overwrite the base data path if required
 
 ==== Default Location
 
-* The base path has a default location for metadata and service dependent data (xref:#services_using_base_path[see above]) which *must be* on a POSIX storage. If not otherwise defined via xref:using-s3-for-blobs[Using S3 for Blobs], it is also used to store blobs using that path:
+* The base path has a default location for metadata and service dependent data (xref:#services_using_base_path[see above]) which *must be* on a POSIX storage. If not otherwise defined when using xref:deployment/storage/s3.adoc[S3], it is also used to store blobs using that path:
 
 ** For container images (inside the container) +
 `/var/lib/ocis`
@@ -256,7 +255,9 @@ The following environment variables can overwrite the base data path if required
 +
 [NOTE]
 ====
-* Do not replace `$HOME` with `~` (tilde). The code does not resolve `~` to the users home directory.
+* Do not replace `$HOME` with `~` (tilde).
+** The code does not resolve `~` to the users home directory.
+
 * Check that `$HOME` resolves to a valid directory.
 ** When using a system user for the runtime, which has no login and therefore no home directory, like in the generic binary setup scenario xref:deployment/binary/binary-setup.adoc#setting-up-systemd-for-infinite-scale[Setting up systemd for Infinite Scale] or in the deployment example xref:depl-examples/small-scale.adoc[Small-Scale with systemd], you *must* specify a base directory location because a system user has no logon and therefore no home directory!
 ====
@@ -265,46 +266,17 @@ The following environment variables can overwrite the base data path if required
 
 * More Important Notes
 +
-NOTE: When setting the base directory manually, it will be used automatically for the xref:#services_using_base_path[services described above] - if they are not otherwise manually defined. 
-+
-WARNING: The location must be used by Infinite Scale exclusively. Writing into this location not using Infinite Scale is discouraged to avoid any unexpected behavior. 
-+
-[IMPORTANT]
-====
-Consider using a separate partition or an external filesystem like NFS for the data path. If you only have one partition for your OS, Infinite Scale and your data, *filling up the filesystem with user data can make your system unresponsive*. This can easily happen under the following conditions: 
+--
+IMPORTANT: When setting the base directory manually, it will be used automatically for the xref:#services_using_base_path[services described above] - if they are not otherwise manually defined. 
 
-* The total storage space consumed by all spaces, even if there are individual quotas set for spaces, exceeds the available disk space.
-* When multiple users have concurrent uploads of big files, those big files - partly uploaded - will not count against the target space quota. These files are temporarily located in the upload folder located in the data path and moved when finished to the target space if the target space quota is not exceeded.
-* Expired uploads that have not been cleaned up (see xref:manage-unfinished-uploads[Manage Unfinished Uploads]) can demand storage unnecessarily and can be a hidden cause of exceeding the available storage space.
-* The index data stored for the xref:{s-path}/search.adoc[search service] is located on the same root path and filled up the filesystem. 
-====
+WARNING: The location must be used by Infinite Scale exclusively. Writing into this location not using Infinite Scale is discouraged to avoid any unexpected behavior. 
+--
 
 === Using S3 for Blobs
 
-When using S3 for storing user data (blobs), metadata must reside on POSIX using the base directory `OCIS_BASE_DATA_PATH` as path. For more details see the section xref:base-data-directory[Base Data Directory] above.
+When using S3 for storing user data (blobs), metadata must reside on POSIX. The environment variable responsible for storaing metadata in S3 is `STORAGE_USERS_S3NG_ROOT` and derives, if not otherwise defined, from the base directory `OCIS_BASE_DATA_PATH`. For more details see the section xref:base-data-directory[Base Data Directory] above.
 
-Configuring the xref:{s-path}/storage-users.adoc[Storage-Users] service is necessary to define the usage of POSIX and S3 storage for Infinite Scale.
-
-The following environment variables are need to be configured for the use with S3 (see the Storage-Users service for details):
-
-[source, yaml]
-----
-# activate s3ng storage driver
-STORAGE_USERS_DRIVER: s3ng
-# Path to metadata stored on POSIX
-STORAGE_USERS_S3NG_ROOT:
-# keep system data on ocis storage
-STORAGE_SYSTEM_DRIVER: ocis
-
-# s3ng specific settings
-STORAGE_USERS_S3NG_ENDPOINT:
-STORAGE_USERS_S3NG_REGION:
-STORAGE_USERS_S3NG_ACCESS_KEY:
-STORAGE_USERS_S3NG_SECRET_KEY:
-STORAGE_USERS_S3NG_BUCKET:
-----
-
-Also see the xref:deployment/container/orchestration/orchestration.adoc#docker-compose-examples[Docker Compose Examples] for more details.
+Read the xref:deployment/storage/s3.adoc[S3] documentation for more details on how to configure Infinite Scale for the use with S3.
 
 == Initialize Infinite Scale
 
@@ -607,31 +579,3 @@ include::partial$multi-location/idm-https-reverse-proxy.adoc[]
 == Maintenance Commands
 
 There are multiple commands available to maintain the Infinite Scale instance. See the xref:maintenance/commands/commands.adoc[Maintenance Commands] document for more details.
-
-== S3 Bucket Policy
-
-With S3 bucket policies, you can configure and secure access to objects in your buckets, see
-{aws-bucket-policy-url}[Using bucket policies]. The following S3 bucket policies are a requirement when connecting to an S3 bucket, replace the bucket name accordingly. When using an S3 bucket you have to set the storage driver to `s3ng`. Also see the xref:deployment/container/orchestration/orchestration.adoc#deploy-the-chart[Deploy the Chart] section in the `Container Orchestration` documentation and the xref:{s-path}/storage-users.adoc[STORAGE_USERS_DRIVER] configuration value.
-
-{empty}
-[source,yaml]
-----
-# The S3NG driver needs an existing S3 bucket with following permissions:
-{
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Sid": "ListObjectsInBucket",
-            "Effect": "Allow",
-            "Action": ["s3:ListBucket"],
-            "Resource": ["arn:aws:s3:::bucket-name"]
-        },
-        {
-            "Sid": "AllObjectActions",
-            "Effect": "Allow",
-            "Action": "s3:*Object",
-            "Resource": ["arn:aws:s3:::bucket-name/*"]
-        }
-    ]
-}
-----
