--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -276,7 +276,7 @@ WARNING: The location must be used by Infinite Scale exclusively. Writing into t
 
 When using S3 for storing user data (blobs), metadata must reside on POSIX. The environment variable responsible for storaing metadata in S3 is `STORAGE_USERS_S3NG_ROOT` and derives, if not otherwise defined, from the base directory `OCIS_BASE_DATA_PATH`. For more details see the section xref:base-data-directory[Base Data Directory] above.
 
-Read the xref:deployment/storage/s3.adoc[S3] documentation for more details on how to configure Infinite Scale for the use with S3.
+Read the xref:deployment/storage/s3.adoc[S3] documentation for more details on how to configure Infinite Scale for the with S3.
 
 == Initialize Infinite Scale
 
