Add the collaboration service

--- a/modules/ROOT/pages/deployment/services/ports-used.adoc
+++ b/modules/ROOT/pages/deployment/services/ports-used.adoc
@@ -59,5 +59,6 @@ The following port ranges are used by services:
 | 9260-9264  | xref:{s-path}/clientlog.adoc[clientlog]
 | 9270-9274  | xref:{s-path}/eventhistory.adoc[eventhistory]
 | 9280-9284  | xref:{s-path}/ocm.adoc[ocm]
+| 9300-9304  | xref:{s-path}/collaboration.adoc[collaboration]
 | 9460-9464  | xref:{s-path}/store.adoc[store]
 |===
