--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -39,6 +39,7 @@
 **** xref:deployment/services/s-list/auth-machine.adoc[Auth Machine]
 **** xref:deployment/services/s-list/auth-service.adoc[Auth Service]
 **** xref:deployment/services/s-list/clientlog.adoc[Clientlog]
+**** xref:deployment/services/s-list/collaboration.adoc[Collaboration]
 **** xref:deployment/services/s-list/eventhistory.adoc[Eventhistory]
 **** xref:deployment/services/s-list/frontend.adoc[Frontend]
 **** xref:deployment/services/s-list/gateway.adoc[Gateway]
