--- a/modules/ROOT/pages/deployment/services/s-list/collaboration.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/collaboration.adoc
@@ -8,7 +8,7 @@
 
 {description}
 
-IMPORTANT: Since this service requires an external document server, it won't start by default when using `ocis server` (xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[supervised mode]). You must start it therefore manually with the `ocis collaboration server` command.
+IMPORTANT: Since this service requires an external document server, it won't start by default when using `ocis server` (xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[supervised mode]). You must start it manually with the `ocis collaboration server` command.
 
 == Default Values
 
@@ -16,13 +16,13 @@ IMPORTANT: Since this service requires an external document server, it won't sta
 
 == Requirements
 
-The collaboration service requires the target document server (ONLYOFFICE, Collabora, etc.) to be up and running. Additionally, some Infinite Scale services are also required to be running in order to register the GRPC service for the `open in app` action in the webUI. The following internal end external services need to be available:
+The collaboration service requires the target document server (ONLYOFFICE, Collabora, etc.) to be up and running. Additionally, some Infinite Scale services are also required to be running in order to register the GRPC service for the `open in app` action in the webUI. The following internal and external services need to be available:
 
 * External document server
 * xref:{s-path}/gateway.adoc[gateway] service.
 * xref:{s-path}/app-provider.adoc[app provider] service.
 
-If any of the named services above have not been started or are not reachable, the collaboration service won't start. For the binary or the docker release of Infinite Scale, check with the xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[List running services] command if they have been started. If not, you must start them manually upfront starting the collaboration service.
+If any of the named services above have not been started or are not reachable, the collaboration service won't start. For the binary or the docker release of Infinite Scale, check with the xref:deployment/general/general-info.adoc#infinite-scale-supervised-services[List running services] command if they have been started. If not, you must start them manually upfront before starting the collaboration service.
 
 == WOPI Configuration
 
