--- a/modules/ROOT/pages/migration/upgrading_4.0.0_5.0.0.adoc
+++ b/modules/ROOT/pages/migration/upgrading_4.0.0_5.0.0.adoc
@@ -2,6 +2,8 @@
 :toc: right
 :description: This document describes the necessary steps when upgrading Infinite Scale from release 4.0.x to 5.0.0.
 
+include::partial$multi-location/compose-version.adoc[]
+
 == Introduction
 
 {description}
@@ -11,15 +13,6 @@ IMPORTANT: Read the important notes in the xref:migration/upgrading-ocis.adoc#in
 IMPORTANT: Check below, if you are affected by breaking changes and prepare all steps mentioned before you start the upgrade.
 
 == Upgrade Steps
-
-////
-'compose_tab_1_tab_text' from the version (branch) can be 'master'. in this case we must use the site.yml's 'ocis-actual-version' to point to a number and not master. this is necessary to dynamically have a version number used and never master as this does not work with docker! we also cant use 'latest' as we have to stick to the referenced stable version.
-////
-
-:compose_version: {compose_tab_1_tab_text}
-ifeval::["{compose_tab_1_tab_text}" == "master"]
-:compose_version: {ocis-actual-version}
-endif::[]
 
 . Shut down the Infinite Scale instance.
 . Update Infinite Scale via:
