[5.0] [PR 831] Render fix in the general-info page
Backport of PR #831

--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -209,7 +209,7 @@ Services That Can Deviate from the Base Data Path::
 The following environment variables can overwrite the base data path if required:
 +
 --
-[source,subs="+callouts,macros,attributes+"]
+[,subs="+callouts,macros,attributes+"]
 ----
 • xref:{s-path}/auth-basic.adoc[OCIS_LDAP_CACERT;AUTH_BASIC_LDAP_CACERT, window=_blank]
 • xref:{s-path}/graph.adoc[OCIS_LDAP_CACERT;GRAPH_LDAP_CACERT, window=_blank]
